--- a/views/shop.html
+++ b/views/shop.html
@@ -5,45 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Shops</title>
+  <link rel="stylesheet" href="/css/main.css">
   <style>
-    body{
-      padding: 0;
-      margin: 0;
-      font-family: sans-serif;
-    }
-    main{
-      padding: 1rem;;
-    }
-    .main-header {
-      width: 100%;
-      height: 3.5rem;
-      background-color: #DBC441;
-      padding: 0 1.5rem;
-    }
-    .main-header__nav{
-      height: 100%;
-      display: flex;
-      align-items: center;
-    }
-    .main-header__item-list{
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-    }
-    .main-header__item{
-      margin: 0 1rem;
-      padding: 0;
-    }
-    .main-header__item a{
-      text-decoration: none;
-      color: black;
-    }
-    .main-header__item a:hover,
-    .main-header__item a:active,
-    .main-header__item a.active{
-      color: #620FFF;
-    }
+
   </style>
 </head>
 <body>
@@ -57,6 +21,23 @@
   </header>
   <main>
     <h1>Display SHOP</h1>
+      <!-- <div class="grid">
+        <article class="card product-item">
+            <header class="card__header">
+                <h1 class="product__title">Great Book</h1>
+            </header>
+            <div class="card__image">
+                <img src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book">
+            </div>
+            <div class="card__content">
+                <h2 class="product__price">$19.99</h2>
+                <p class="product__description">A very interesting book about so many even more interesting things!</p>
+            </div>
+            <div class="card__actions">
+                <button class="btn">Add to Cart</button>
+            </div>
+        </article>
+      </div> -->
   </main>
 </body>
 </html>
