--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,5 +1,6 @@
 <%- include('../includes/head.ejs') %>
   <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/css/forms.css">
 </head>
 <body>
   <%- include('../includes/navigation.ejs') %>
@@ -9,7 +10,19 @@
         <label for="title">Title</label>
         <input type="text" name="title" id="title">
       </div>
-      <button type="submit">SEND</button>
+      <div class="form-control">
+        <label for="imageURL">ImageURL</label>
+        <input type="text" name="imageURL" id="imageURL">
+      </div>
+      <div class="form-control">
+        <label for="price">Price</label>
+        <input type="number" name="price" id="price" step="0.01">
+      </div>
+      <div class="form-control">
+        <label for="description">Description</label>
+        <textarea name="description" id="description" rows="10"></textarea>
+      </div>
+      <button class="btn" type="submit">ADD PRODUCT</button>
     </form>
   </main>
 <%- include('../includes/end.ejs') %>
