--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -3,7 +3,6 @@
 <body>
   <%- include('../includes/navigation.ejs') %>
   <main>
-    <!-- <h1>Display SHOP</h1> -->
     <% if(prods.length > 0) { %>
       <div class="grid">
         <% for( let product of prods) { %>
@@ -12,14 +11,17 @@
                   <h1 class="product__title"><%= product.title %></h1>
               </header>
               <div class="card__image">
-                  <img src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book">
+                  <img src="<%= product.imageURL %>" alt="A Book">
               </div>
               <div class="card__content">
-                  <h2 class="product__price">$19.99</h2>
-                  <p class="product__description">A very interesting book about so many even more interesting things!</p>
+                  <h2 class="product__price">$<%= product.price%></h2>
+                  <p class="product__description"><%= product.description %></p>
               </div>
               <div class="card__actions">
+                <a class="btn" href="/products/<%= product.id %>">Details</a>
+                <form action="/add-to-cart" method="POST">
                   <button class="btn">Add to Cart</button>
+                </form>
               </div>
           </article>
         <% } %>
