--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -2,6 +2,16 @@
 </head>
 <body>
   <%- include('../includes/navigation.ejs') %>
-  <main>
+  <main class="centered">
+    <h1><%= product.title %></h1>
+    <hr>
+    <div>
+      <img src="<%= product.imageURL %>" alt="<%= product.title %>">
+    </div>
+    <h2><%= product.price %></h2>
+    <p><%= product.description %></p>
+    <form action="/cart" method="post">
+      <%- include('../includes/add-to-cart.ejs') %>
+    </form>
   </main>
 <%- include('../includes/end.ejs') %>
