--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,28 +1,42 @@
 <%- include('../includes/head.ejs') %>
-  <link rel="stylesheet" href="/css/product.css">
-  <link rel="stylesheet" href="/css/forms.css">
+<link rel="stylesheet" href="/css/product.css">
+<link rel="stylesheet" href="/css/form.css">
 </head>
 <body>
   <%- include('../includes/navigation.ejs') %>
   <main>
-    <form class="product-form" action="/admin/add-product" method="POST">
-      <div class="form-control">
-        <label for="title">Title</label>
-        <input type="text" name="title" id="title">
+    <% if (prods.length > 0) { %>
+      <div class="grid">
+          <% for (let product of prods) { %>
+              <article class="card product-item">
+                  <header class="card__header">
+                      <h1 class="product__title">
+                          <%= product.title %>
+                      </h1>
+                  </header>
+                  <div class="card__image">
+                    <img src="<%= product.imageURL %>" alt="<%= product.title %>">
+                  </div>
+                  <div class="card__content">
+                      <h2 class="product__price">$
+                          <%= product.price %>
+                      </h2>
+                      <p class="product__description">
+                          <%= product.description %>
+                      </p>
+                  </div>
+                  <div class="card__actions">
+                      <a href="/admin/edit-product" class="btn">Edit</a>
+                      <form action="/admin/delete-product" method="POST">
+                          <button class="btn" type="submit">Delete</button>
+                      </form>
+
+                  </div>
+              </article>
+              <% } %>
       </div>
-      <div class="form-control">
-        <label for="imageURL">ImageURL</label>
-        <input type="text" name="imageURL" id="imageURL">
-      </div>
-      <div class="form-control">
-        <label for="price">Price</label>
-        <input type="number" name="price" id="price" step="0.01">
-      </div>
-      <div class="form-control">
-        <label for="description">Description</label>
-        <textarea name="description" id="description" rows="10"></textarea>
-      </div>
-      <button class="btn" type="submit">ADD PRODUCT</button>
-    </form>
+      <% } else { %>
+          <h1>No Products Found!</h1>
+          <% } %>
   </main>
 <%- include('../includes/end.ejs') %>
