--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1,42 +1,31 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/product.css">
-<link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/css/forms.css">
 </head>
 <body>
   <%- include('../includes/navigation.ejs') %>
   <main>
-    <% if (prods.length > 0) { %>
-      <div class="grid">
-          <% for (let product of prods) { %>
-              <article class="card product-item">
-                  <header class="card__header">
-                      <h1 class="product__title">
-                          <%= product.title %>
-                      </h1>
-                  </header>
-                  <div class="card__image">
-                    <img src="<%= product.imageURL %>" alt="<%= product.title %>">
-                  </div>
-                  <div class="card__content">
-                      <h2 class="product__price">$
-                          <%= product.price %>
-                      </h2>
-                      <p class="product__description">
-                          <%= product.description %>
-                      </p>
-                  </div>
-                  <div class="card__actions">
-                      <a href="/admin/edit-product" class="btn">Edit</a>
-                      <form action="/admin/delete-product" method="POST">
-                          <button class="btn" type="submit">Delete</button>
-                      </form>
-
-                  </div>
-              </article>
-              <% } %>
+    <form class="product-form" action="/admin/<% if (editing) { %>edit-product <%} else {%>add-product <% } %>" method="POST">
+      <div class="form-control">
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title" value="<% if (editing) { %> <%= product.title %> <% } %>">
       </div>
-      <% } else { %>
-          <h1>No Products Found!</h1>
-          <% } %>
+      <div class="form-control">
+        <label for="imageURL">ImageURL</label>
+        <input type="text" name="imageURL" id="imageURL" value="<% if (editing) { %> <%= product.imageURL %> <% } %>">
+      </div>
+      <div class="form-control">
+        <label for="price">Price</label>
+        <input type="number" name="price" id="price" step="0.01" value=<% if (editing) { %> <%= product.price %> <% } %>>
+      </div>
+      <div class="form-control">
+        <label for="description">Description</label>
+        <textarea name="description" id="description" rows="10"><% if (editing) { %> <%= product.description %> <% } %></textarea>
+      </div>
+      <% if (editing) { %>
+        <input type="hidden" value="<%= product.id %>" name="productId">
+      <% } %>
+      <button class="btn" type="submit"><% if (editing) { %>Update Product <% } else { %> Add Product <% } %></button>
+    </form>
   </main>
 <%- include('../includes/end.ejs') %>
