--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -14,7 +14,7 @@
                       </h1>
                   </header>
                   <div class="card__image">
-                      <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                      <img src="<%= product.imageURL %>" alt="<%= product.title %>">
                   </div>
                   <div class="card__content">
                       <h2 class="product__price">$
@@ -25,11 +25,11 @@
                       </p>
                   </div>
                   <div class="card__actions">
-                      <a href="/admin/edit-product" class="btn">Edit</a>
+                      <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                       <form action="/admin/delete-product" method="POST">
-                          <button class="btn" type="submit">Delete</button>
+                        <input type="hidden" name="productId" value="<%= product.id %>">  
+                        <button class="btn" type="submit">Delete</button>
                       </form>
-
                   </div>
               </article>
               <% } %>
