--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -13,7 +13,7 @@
         <a class="<%= path === '/cart' ? 'active': '' %>" href="/cart">Cart</a>
       </li>
       <li class="main-header__item">
-        <a class="<%= path === '/orders' ? 'active': '' %>" href="/oders">Orders</a>
+        <a class="<%= path === '/orders' ? 'active': '' %>" href="/orders">Orders</a>
       </li>
       <li class="main-header__item">
         <a class="<%= path === '/checkout' ? 'active': '' %>" href="/checkout">Checkout</a>
